# linux-usb-scanner-client

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
config/: linux-usb-scanner-client.conf
scripts/: check-health.sh  clear-scan-queue.sh  install.sh  restart-services.sh  uninstall.sh
src/linux_usb_scanner_client/: __init__.py  __main__.py  alert_monitor.py  auto_update.py  cli.py  config.py  device.py  health.py  keyboard.py  logging_setup.py  service.py  storage.py  storage_monitor.py  tcp_sender.py  timeutil.py  versioning.py
systemd/: linux-usb-scanner-client-monitor.service  linux-usb-scanner-client-update.service  linux-usb-scanner-client-update.timer  linux-usb-scanner-client.service
tests/: test_alert_monitor.py  test_auto_update.py  test_config.py  test_health_format.py  test_keyboard.py  test_logging_setup.py  test_storage.py  test_storage_monitor.py  test_tcp_sender.py  test_version.py
